Fix menu alignment in equation toolbar

--- a/apps/spreadsheeteditor/main/resources/less/toolbar.less
+++ b/apps/spreadsheeteditor/main/resources/less/toolbar.less
@@ -123,6 +123,9 @@
     .separator {
         height: 20px;
     }
+    &.has-open-menu {
+        z-index: @zindex-navbar + 1;
+    }
 }
 
 #slot-field-fontsize {
